--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">My Movies App</string>
+    <string name="something_went_wrong">Something went wrong</string>
 </resources>
